--- a/package.json
+++ b/package.json
@@ -11,15 +11,25 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "firebase": "^9.23.0",
+    "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
+    "react-notifications-component": "^4.0.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
+    "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
-    "typescript": "^5.1.6"
+    "sharp": "^0.32.1",
+    "svgo": "^3.0.2",
+    "tailwind-merge": "^1.13.2",
+    "typescript": "^5.1.6",
+    "vite-plugin-image-optimizer": "^1.1.6",
+    "vite-plugin-svgr": "^3.2.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
