--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@reduxjs/toolkit": "^1.9.5",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
@@ -20,6 +21,7 @@
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-notifications-component": "^4.0.1",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-spinners": "^0.13.8",
