--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/node": "^20.4.2",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "firebase": "^9.23.0",
     "formik": "^2.4.2",
+    "lucide-react": "^0.262.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -29,7 +33,8 @@
     "redux-persist": "^6.0.0",
     "sharp": "^0.32.1",
     "svgo": "^3.0.2",
-    "tailwind-merge": "^1.13.2",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "^5.1.6",
     "vite-plugin-image-optimizer": "^1.1.6",
     "vite-plugin-svgr": "^3.2.0",
