--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^9.23.0",
     "formik": "^2.4.2",
     "lucide-react": "^0.262.0",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
