--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "firebase": "^9.23.0",
     "formik": "^2.4.2",
     "lucide-react": "^0.262.0",
