--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -15,3 +15,10 @@ jobs:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_POCKETMINT_FRONTEND }}"
           projectId: pocketmint-frontend
+      - name: Create env file
+        run: |
+          touch .env
+          echo API_ENDPOINT=${{ secrets.VITE_BASE_URL_DEV}} >> .env
+          echo API_ENDPOINT=${{ secrets.VITE_BASE_URL_PROD}} >> .env
+          echo API_ENDPOINT=${{ secrets.VITE_ENV}} >> .env
+          cat .env
