--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,9 +11,9 @@ jobs:
       - name: Create env file
         run: |
           touch .env
-          echo API_ENDPOINT=${{ secrets.VITE_BASE_URL_DEV}} >> .env
-          echo API_ENDPOINT=${{ secrets.VITE_BASE_URL_PROD}} >> .env
-          echo API_ENDPOINT=${{ secrets.VITE_ENV}} >> .env
+          echo VITE_BASE_URL_DEV=${{ secrets.VITE_BASE_URL_DEV}} >> .env
+          echo VITE_BASE_URL_PROD=${{ secrets.VITE_BASE_URL_PROD}} >> .env
+          echo VITE_ENV=${{ secrets.VITE_ENV}} >> .env
           cat .env
       - uses: actions/checkout@v3
       - run: yarn install --frozen-lockfile && yarn build
