--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,6 +6,10 @@ name: Deploy to Firebase Hosting on merge
   push:
     branches:
       - main
+env:
+  - VITE_BASE_URL_DEV=http://127.0.0.1:8000
+  - VITE_BASE_URL_PROD=http://18.141.203.207/
+  - VITE_ENV=prod
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -13,9 +17,9 @@ jobs:
       - name: Create env file
         run: |
           touch .env
-          echo VITE_BASE_URL_DEV=${{ secrets.VITE_BASE_URL_DEV}} >> .env
-          echo VITE_BASE_URL_PROD=${{ secrets.VITE_BASE_URL_PROD}} >> .env
-          echo VITE_ENV=${{ secrets.VITE_ENV}} >> .env
+          echo VITE_BASE_URL_DEV=$VITE_BASE_URL_DEV >> .env
+          echo VITE_BASE_URL_PROD=$VITE_BASE_URL_PROD >> .env
+          echo VITE_ENV=$VITE_ENV >> .env
           cat .env
       - uses: actions/checkout@v3
       - run: yarn install --frozen-lockfile && yarn build
