--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,9 +17,9 @@ jobs:
       - name: Create env file
         run: |
           touch .env
-          echo VITE_BASE_URL_DEV=$VITE_BASE_URL_DEV >> .env
-          echo VITE_BASE_URL_PROD=$VITE_BASE_URL_PROD >> .env
-          echo VITE_ENV=$VITE_ENV >> .env
+          echo VITE_BASE_URL_DEV=${{ secrets.VITE_BASE_URL_DEV}} >> .env
+          echo VITE_BASE_URL_PROD=${{ secrets.VITE_BASE_URL_PROD}} >> .env
+          echo VITE_ENV=${{ secrets.VITE_ENV}} >> .env
           cat .env
       - uses: actions/checkout@v3
       - run: yarn install --frozen-lockfile && yarn build
