--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,15 +14,12 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Create env file
-        run: |
-          touch .env
+      - uses: actions/checkout@v3
+      - run: touch .env
           echo BASE_URL_DEV=${{ secrets.BASE_URL_DEV}} >> .env
           echo BASE_URL_PROD=${{ secrets.BASE_URL_PROD}} >> .env
           echo ENV=${{ secrets.ENV}} >> .env
-          cat .env
-      - uses: actions/checkout@v3
-      - run: yarn install --frozen-lockfile && yarn build
+          yarn install --frozen-lockfile && yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
