--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -8,15 +8,12 @@ jobs:
     if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
     runs-on: ubuntu-latest
     steps:
-      - name: Create env file
-        run: |
-          touch .env
+      - uses: actions/checkout@v3
+      - run: touch .env
           echo BASE_URL_DEV=${{ secrets.BASE_URL_DEV}} >> .env
           echo BASE_URL_PROD=${{ secrets.BASE_URL_PROD}} >> .env
           echo ENV=${{ secrets.ENV}} >> .env
-          cat .env
-      - uses: actions/checkout@v3
-      - run: yarn install --frozen-lockfile && yarn build
+          yarn install --frozen-lockfile && yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
