--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,11 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: touch .env &&
-          echo BASE_URL_DEV=${{ secrets.BASE_URL_DEV}} >> .env &&
-          echo BASE_URL_PROD=${{ secrets.BASE_URL_PROD}} >> .env &&
-          echo ENV=${{ secrets.ENV}} >> .env &&
-          yarn install --frozen-lockfile && yarn build
+      - run: yarn install --frozen-lockfile && yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
