--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,7 +6,10 @@ name: Deploy to Firebase Hosting on merge
   push:
     branches:
       - main
-env: ENV=prod
+env:
+  BASE_URL_DEV: ${{ secrets.BASE_URL_DEV }}
+  BASE_URL_PROD: ${{ secrets.BASE_URL_PROD }}
+  ENV: ${{ secrets.ENV}}
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
