--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -3,7 +3,10 @@
 
 name: Deploy to Firebase Hosting on PR
 "on": pull_request
-env: ENV=prod
+env:
+  BASE_URL_DEV: ${{ secrets.BASE_URL_DEV }}
+  BASE_URL_PROD: ${{ secrets.BASE_URL_PROD }}
+  ENV: ${{ secrets.ENV}}
 jobs:
   build_and_preview:
     if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
