--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,15 +7,13 @@ name: Deploy to Firebase Hosting on merge
     branches:
       - main
 
-env:
-  BASE_URL_DEV: ${{ secrets.BASE_URL_DEV }}
-  BASE_URL_PROD: ${{ secrets.BASE_URL_PROD }}
-  ENV: ${{ secrets.ENV}}
-
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Make env variables
+        run: |
+          echo 'VITE_ENV= ${{ secrets.VITE_ENV}}'>>.env
       - uses: actions/checkout@v3
       - run: yarn install --frozen-lockfile && yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
