--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -4,16 +4,14 @@
 name: Deploy to Firebase Hosting on PR
 "on": pull_request
 
-env:
-  BASE_URL_DEV: ${{secrets.BASE_URL_DEV}}
-  BASE_URL_PROD: ${{secrets.BASE_URL_PROD}}
-  ENV: ${{secrets.ENV}}
-
 jobs:
   build_and_preview:
     if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
     runs-on: ubuntu-latest
     steps:
+      - name: Make env variables
+        run: |
+          echo 'VITE_ENV= ${{ secrets.VITE_ENV}}'>>.env
       - uses: actions/checkout@v3
       - run: yarn install --frozen-lockfile && yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
