--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Make env variables
         run: |
           echo 'VITE_ENV= ${{ secrets.VITE_ENV}}'>>.env
+          echo 'VITE_ENV= ${{ secrets.VITE_ENV}}'>>.env.production
       - uses: actions/checkout@v3
       - run: yarn install --frozen-lockfile && yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
