--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,7 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: yarn install --frozen-lockfile && yarn build
+      - run: |
+          echo 'VITE_ENV=${{ secrets.VITE_ENV }}' >> .env
+          echo 'VITE_BACKEND_URL_DEV=${{ secrets.VITE_BACKEND_URL_DEV }}' >> .env
+          echo 'VITE_BACKEND_URL_PROD=${{ secrets.VITE_BACKEND_URL_PROD }}' >> .env
+          yarn install --frozen-lockfile && yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
